--- a/public/about/about/index.html
+++ b/public/about/about/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Probabilistic Delivery</title>
+<title>Theo van Stratum, PhD</title>
 <meta name="keywords" content="">
 <meta name="description" content="What Is Probabilistic Delivery? A New Operating System for Software Governance
 By Theo van Stratum, PhD
@@ -79,7 +79,7 @@ Every year, organisations collectively spend hundreds of billions of dollars on 
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="Probabilistic Delivery (Alt + H)">Probabilistic Delivery</a>
+            <a href="http://localhost:1313/" accesskey="h" title="Theo van Stratum, PhD (Alt + H)">Theo van Stratum, PhD</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -137,7 +137,7 @@ Every year, organisations collectively spend hundreds of billions of dollars on 
     </main>
     
 <footer class="footer">
-        <span>&copy; 2026 <a href="http://localhost:1313/">Probabilistic Delivery</a></span> · 
+        <span>&copy; 2026 <a href="http://localhost:1313/">Theo van Stratum, PhD</a></span> · 
 
     <span>
         Powered by
