--- a/public/about/index.html
+++ b/public/about/index.html
@@ -5,9 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Abouts | Probabilistic Delivery</title>
+<title>Abouts | Theo van Stratum, PhD</title>
 <meta name="keywords" content="">
-<meta name="description" content="Abouts - Probabilistic Delivery">
+<meta name="description" content="Abouts - Theo van Stratum, PhD">
 <meta name="author" content="Theo van Stratum, PhD">
 <link rel="canonical" href="http://localhost:1313/about/">
 <link crossorigin="anonymous" href="http://localhost:1313/assets/css/stylesheet.da3211e5ef867bf2b75fd5a6515cfed7195c011e8ab735694e203810a827097b.css" integrity="sha256-2jIR5e&#43;Ge/K3X9WmUVz&#43;1xlcAR6KtzVpTiA4EKgnCXs=" rel="preload stylesheet" as="style">
@@ -77,7 +77,7 @@
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="Probabilistic Delivery (Alt + H)">Probabilistic Delivery</a>
+            <a href="http://localhost:1313/" accesskey="h" title="Theo van Stratum, PhD (Alt + H)">Theo van Stratum, PhD</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -128,7 +128,7 @@ Every year, organisations collectively spend hundreds of billions of dollars on 
     </main>
     
 <footer class="footer">
-        <span>&copy; 2026 <a href="http://localhost:1313/">Probabilistic Delivery</a></span> · 
+        <span>&copy; 2026 <a href="http://localhost:1313/">Theo van Stratum, PhD</a></span> · 
 
     <span>
         Powered by
